Adds editarGuia con imagen

--- a/views/editar_guia.ejs
+++ b/views/editar_guia.ejs
@@ -13,10 +13,10 @@
     <div class="container" style="margin-bottom: 10%;">
         <h1 class="white-text">Editar Guía</h4>
             <div class="white" style="padding-top: 2em; padding-bottom: 2em;">
-                <form action="/guias/editar_guia" method="POST">
+                <form action="/guias/editar_guia" method="POST" enctype="multipart/form-data">
                     <div class="row  valign-wrapper" style="margin-bottom: 0px;">
                         <div class="col s3 center">
-                            <div class="card" style="border-radius: 20px;">
+                            <!-- <div class="card" style="border-radius: 20px;">
                                 <div class="card-image">
                                     <img src="/img/no-img.jpg"
                                         style="border-radius: 20px;">
@@ -27,6 +27,16 @@
                                             <i class="tiny material-icons">edit</i>
                                         </a>
                                     </div>
+                                </div>
+                            </div> -->
+                            <div class="card imgPicker">
+                                <div class="card-image">
+                                    <input value="<%=imagen%>" name="imagen_url" style="display:none">
+                                    <img class="imgPicker imgP" src="/uploads/<%=imagen%>">
+                                    <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload"
+                                        onclick="filebutton.click()"><i class="material-icons">edit</i></div>
+                                    <input class="file-upload" id="filebutton" type="file" name="url_imagen"
+                                        style="display:none">
                                 </div>
                             </div>
                         </div>
@@ -88,6 +98,6 @@
 
             </div>
     </div>
-
+    <script src="/js/script_nuevo_museo.js"></script>
     <%- include('includes/footer.ejs') %>
         
