uploading sala files works

--- a/views/museo_salas.ejs
+++ b/views/museo_salas.ejs
@@ -17,7 +17,7 @@
 
                                     <div class="card imgPicker">
                                         <div class="card-image">
-                                            <img class="imgPicker imgP" src="/uploads/<%=sala.img_sala%>">
+                                            <img class="imgPicker imgP" src="/uploads/museos/<%=sala.img_sala%>">
                                         </div>
                                     </div>
 
