--- a/views/nueva_obra.ejs
+++ b/views/nueva_obra.ejs
@@ -1,7 +1,8 @@
 <%- include('includes/header_image.ejs') %>
     <main>
-        <form method="POST" enctype="multipart/form-data">
-
+        <form enctype="multipart/form-data">
+            <input style="display:none" id="id_museo" value="<%= museo %>">
+            <input style="display:none" id="id_sala" value="<%= sala %>">
             <div class="container">
                 <h1 class="white-text">Nueva obra</h1>
 
@@ -13,6 +14,8 @@
                                 <div class="col s10">
                                     <div class="card imgPicker">
                                         <div class="card-image">
+                                            <input id="filename" style="display:none">
+                                            <input id="event" value="museo" style="display:none">
                                             <img class="imgPicker imgP" src="/img/no-img.jpg">
                                             <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload"
                                                 onclick="filebutton.click()"><i class="material-icons">edit</i></div>
@@ -33,6 +36,7 @@
 
                                 <div class="input-field col s10 offset-s1">
                                     <div class="file-field input-field">
+                                        <input id="audioname" style="display:none">
                                         <div class="btn">
                                             <span> Mp3</span>
                                             <input type="file">
@@ -85,5 +89,5 @@
 
         </form>
     </main>
-
+    <script src="/js/script_create_obra.js"></script>
     <%- include('includes/footer.ejs') %>
