--- a/views/sala_obras.ejs
+++ b/views/sala_obras.ejs
@@ -18,7 +18,7 @@
                                     
                                         <div class="card imgPicker">
                                             <div class="card-image">
-                                            <img class="imgPicker imgP" src="/uploads/<%=obra.img_obra%>">
+                                            <img class="imgPicker imgP" src="/uploads/museos/<%=obra.img_obra%>">
                                             </div>
                                         </div>
                                     
