--- a/views/nuevo_museo.ejs
+++ b/views/nuevo_museo.ejs
@@ -2,11 +2,7 @@
     <main>
             <div class="row">
                 <div class="col s10 offset-s1">
-                    <h4 class="card-title"> Regístra un nuevo museo      
-                        <button onclick="addSalas()" id="addSalas" class="waves-effect waves-dark btn"> <i class="material-icons"> remove </i> </button> 
-                                            <span id="num_salas"> 0 </span>
-                                        <button onclick="addSalas()" id="addSalas" class="waves-effect waves-dark btn"> <i class="material-icons"> add </i> </button>  
-                    </h4> 
+                    <h4 class="card-title"> Regístra un nuevo museo</h4> 
                     <div class="card">
                         <div class="card-content pb-0">
                             <div class="card-header mb2"> 
@@ -67,8 +63,6 @@
                                  </div>
                                    <div class="step-actions">
                                       <div class="row">
-                                        <div class="col"> <button class="red btn btn-reset" type="reset"> Resetear <i class="material-icons left"> clear </i>  </button> </div>
-                                        <div class="col"> <button class="btn light-blue-secondary previous-step"> Anterior  <i class="material-icons left"> arrow_back </i> </button> </div>
                                         <div class="col"> <button class="waves-effect waves dark btn light-blue-secondary next-step" type="reset"> Siguiente <i class="material-icons right"> arrow_forward </i> </button> </div>
                                       </div>
                                    </div>
@@ -265,7 +259,6 @@
                                 </div>
                                     <div class="step-actions">
                                         <div class="row">
-                                            <div class="col"> <button class="red btn btn-reset" type="reset"> Resetear <i class="material-icons left"> clear </i>  </button> </div>
                                             <div class="col"> <button class="btn light-blue-secondary previous-step"> Anterior  <i class="material-icons left"> arrow_back </i> </button> </div>
                                             <div class="col"> <button class="waves-effect waves dark btn light-blue-secondary next-step" type="reset"> Siguiente <i class="material-icons right"> arrow_forward </i> </button> </div>
                                         </div>
@@ -289,9 +282,10 @@
                                         <div class="row">
                                             <div class="col"> <button class="red btn btn-reset" type="reset"> Resetear <i class="material-icons left"> clear </i>  </button> </div>
                                             <div class="col"> <button class="btn light-blue-secondary previous-step"> Anterior  <i class="material-icons left"> arrow_back </i> </button> </div>
-                                            <button type="submit" value="upload" class="btn waves-effect waves-light green"><i class="material-icons left">check</i>
+                                            <div class="col"><button type="submit" value="upload" class="btn waves-effect waves-light green"><i class="material-icons left">check</i>
                                             Registrar Museo
-                                            </button>
+                                            </button></div>
+                                            <div class="col"> <button class="waves-effect waves dark btn light-blue-secondary next-step" type="reset"> Siguiente <i class="material-icons right"> arrow_forward </i> </button> </div>
                                         </div>
                                     </div>
                                  </div>
