--- a/views/nueva_sala.ejs
+++ b/views/nueva_sala.ejs
@@ -15,7 +15,7 @@
                                         <div class="card-image">
                                             <input id="filename" style="display:none">
                                             <input id="event" value="museo" style="display:none">
-                                            <img class="imgPicker imgP" src="../img/no-img.jpg">
+                                            <img class="imgPicker imgP" src="/img/no-img.jpg">
                                             <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload"
                                                 onclick="filebutton.click()"><i class="material-icons">edit</i></div>
                                             <input class="file-upload" id="filebutton" type="file" name="uploadFile"
