--- a/views/obra_modificar.ejs
+++ b/views/obra_modificar.ejs
@@ -16,7 +16,7 @@
                                     <div class="col s10">
                                         <div class="card imgPicker">
                                             <div class="card-image">
-                                                <img class="imgPicker imgP" src="/uploads/<%=obra.img_obra%>">
+                                                <img class="imgPicker imgP" src="/uploads/museos/<%=obra.img_obra%>">
                                                 <input style="display:none" name="url_obra" value="<%=obra.img_obra%>">
                                                 <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload"
                                                     onclick="filebutton.click()"><i class="material-icons">edit</i>
