--- a/views/editar_guia.ejs
+++ b/views/editar_guia.ejs
@@ -43,7 +43,7 @@
                         <div class="col s9">
                             <div class="row">
                                 <div class="col s6">
-                                    <h5>Nombre dela Limitacion </h5>
+                                    <h5>Nombre dela Limitación </h5>
                                     <!-- <label for="nombre_limitacion">Nombre de la Limitacion</label> -->
                                     <input id="nombre_limitacion" value="<%= nombre %> " type="text" name="nombre">
                                 </div>
@@ -56,7 +56,7 @@
                             </div>
                             <div class="row">
                                 <div class="col s12">
-                                    <h5>Descripcion</h5>
+                                    <h5>Descripción</h5>
                                     <textarea placeholder="Descripcion de Limitacion..." id="textarea2"
                                         class="materialize-textarea" data-length="120"
                                         name="descripcion"><%= descripcion %> </textarea>
@@ -78,7 +78,7 @@
                     <div class="row valign-wrapper">
                         <div class="col s1" style="margin-top: 0px;"></div>
                         <div class="col s3" style="margin: auto 0;">
-                            <h5 class="center">Optional Video</h5>
+                            <h5 class="center">ID del Video de Youtube</h5>
                         </div>
                         <div class="col s7" style="margin: auto 0;">
                             <div class="left">
