--- a/views/nuevo_museo.ejs
+++ b/views/nuevo_museo.ejs
@@ -1,8 +1,8 @@
 <%- include('includes/header_image.ejs') %>
-    <main>
+    <main class="img-background">
             <div class="row">
                 <div class="col s10 offset-s1">
-                    <h4 class="card-title"> Regístra un nuevo museo</h4> 
+                    <h4 class="white-text card-title"> Regístra un nuevo museo</h4> 
                     <div class="card">
                         <div class="card-content pb-0">
                             <div class="card-header mb2"> 
