--- a/views/sala_modificar.ejs
+++ b/views/sala_modificar.ejs
@@ -1,87 +1,83 @@
 <%- include('includes/header_image.ejs') %>
-    <main>
-        <form method="POST" enctype="multipart/form-data">
-            <% for (let m of museo){%>
-                <% for (let sala of salas){%>
-                    <div class="container">
-                        <h1 class="white-text">Nuevo museo</h1>
-
-                        <div class="white min-container">
-                            <div class="row center margin-10">
-                                <!-- valign-wrapper -->
-                                <div class="col s5">
-                                    <div class="row valign-wrapper">
-                                        <div class="col s10">
-                                            <div class="card imgPicker">
-                                                <div class="card-image">
-                                                    <img class="imgPicker imgP" src="/uploads/<%=sala.img_sala%>">
-                                                    <input style="display:none" name="url_sala"
-                                                        value="<%=sala.img_sala%>">
-                                                    <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload"
-                                                        onclick="filebutton.click()"><i class="material-icons">edit</i>
+<% for (let m of museos){%>
+    <% for (let sala of salas){%>
+    <main class="img-background">
+            <div class="row">
+                <form id="modifySala" enctype="multipart/form-data">
+                <div class="col s10 offset-s1">
+                    <h4 class="white-text card-title"> <%=sala.nom_sala%> </h4> 
+                    <input id="id_museo" value="<%museo%>" style="display:none">
+                    <input id="id_sala" value="<%=sala.id_sala%>" style="display:none">
+                    <div class="card">
+                        <div class="card-content pb-0">
+                            <div class="card-header mb2"> 
+                            </div>
+                            <form id="uploadSala" enctype="multipart/form-data">
+                            <ul class="stepper  linear horizontal">
+                            <li class="step active"> 
+                                <div class="step-title waves-effect"> <p>Información</p> </div>
+                                <div class="step-content">
+                                 <div class="row">
+                                     <div class="col s7">
+                            
+                                         <!-- NOMBRE -->
+                                         <div class="row center">
+                                           <div class="col s10 offset-s1">
+                                             <div class="input-field">
+                                                 <input id="nom_sala" name="nom_sala" type="text"
+                                                     class="validate" required data-length="70" maxlength="70" value="<%=sala.nom_sala%>">
+                                                 <label for="nom_sala"> Nombre de la sala <span class="required">*</span></label>
+                                                 <span class="helper-text" data-error="Este input es requerido"></span>
+                                             </div> 
+                                            
+                                             <!-- DESCRIPCIÓN -->
+                                             <div class="input-field">
+                                                <textarea id="desc_sala" name="desc_sala"
+                                                class="materialize-textarea validate" required><%=sala.desc_sala%></textarea>
+                                                <label for="desc_sala"> Descripción <span class="required">*</span></label>
+                                                <span class="helper-text" data-error="Este input es requerido"></span>
+                                             </div>
+                                            </div>
+                                         </div>
+                                     </div>
+                                     <div class="col s5">
+                                        
+                                            <div class="col s9 offset-s2">
+                                                   <input type="text" name="event" id="event" value="museo" style="display:none">
+                                                   <input type="text" name="filename" id="filename" value="<%=sala.img_sala%>" style="display:none">
+                                                   <div id="imgMuseoValidate"> Selecciona una imagen para la sala </div>
+                                                <div class="card imgPicker">
+                                                    <div class="card-image">
+                                                       <img class="imgPicker imgP" src="/uploads/museos/<%=sala.img_sala%>">
+                                                       <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload"
+                                                           onclick="uploadFile.click()"><i class="material-icons">edit</i></div>
+                                                       <input class="file-upload" type="file" name="uploadFile" id="uploadFile" style="display:none" accept="image/*">
                                                     </div>
-                                                    <input class="file-upload" id="filebutton" type="file"
-                                                        name="url_imagen" style="display:none">
                                                 </div>
                                             </div>
-                                        </div>
+                                       
                                     </div>
-                                </div>
-                                <div class="col s7">
-                                    <div class="row center">
-                                        <div class="input-field col s10 offset-s1">
-                                            <input placeholder="Ej: Libertad" id="nom_sala" name="nom_sala" type="text"
-                                                value="<%=sala.nom_sala%>" class="validate">
-                                            <label for="nom_sala"> Nombre de sala </label>
-                                        </div>
-
-                                        <div class="input-field col s10 offset-s1">
-                                            <div class="file-field input-field">
-                                                <div class="btn">
-                                                    <span> Mp3</span>
-                                                    <input type="file">
-                                                </div>
-                                                <div class="file-path-wrapper">
-                                                    <input placeholder="audioguía (archivo mp3)"
-                                                        class="file-path validate" value="<%=sala.audio_sala%>"
-                                                        name="file" type="text">
-                                                </div>
-
-                                            </div>
-
-                                        </div>
-
-                                        <div class="col offset-s1">
-                                            <div class="col">
-                                                <a href="/museo/<%=m.id_museo%>/<%=sala.id_sala%>/obras"
-                                                    class="btn waves-effect waves-light primary-color"><i
-                                                        class="material-icons left">settings</i> Editar obras </a>
-                                            </div>
-                                        </div>
+                                 </div>
+                                   <div class="step-actions">
+                                      <div class="row">
+                                        <div class="col"> <button class="waves-effect waves dark btn light-blue-secondary next-step" type="reset"> Siguiente <i class="material-icons right"> arrow_forward </i> </button> </div>
+                                        <div class="col"><button type="submit" value="upload" class="btn waves-effect waves-light green"><i class="material-icons left">check</i>
+                                            Guardar Cambios
+                                            </button></div>
                                     </div>
+                                   </div>
                                 </div>
-
-                            </div>
-
-                            <div class="row center margin-10">
-                                <div class="input-field col s10 offset-s1">
-                                    <textarea id="desc_sala" name="desc_sala"
-                                        class="materialize-textarea validate"> <%=sala.desc_sala%> </textarea>
-                                    <label for="desc_sala"> Descripción </label>
-                                </div>
-
-                                <button type="submit" value="upload"
-                                    class="btn waves-effect waves-light green margin-10">
-                                    <i class="material-icons left">check</i>
-                                    Guardar cambios
-                                </button>
-                            </div>
+                             </li>
+                        </form>
                         </div>
-
                     </div>
                     <%}%>
                         <%}%>
-        </form>
+                </div>
+            </div>
+       
+        
+            <script src="/js/script_create_sala.js"></script>    
     </main>
-
+    
     <%- include('includes/footer.ejs') %>
