--- a/views/museo_registrar.ejs
+++ b/views/museo_registrar.ejs
@@ -1,10 +1,11 @@
 <%- include('includes/header_image.ejs') %>
-  <main>
+  <main class="img-background">
     <% for (let museo of museos){%>
     <div class="row">
       <div class="col s10 offset-s1">
-        <h4 class="card-title"> <%= museo.nom_museo %></h4>
+        <h4 class="card-title white-text"> <%= museo.nom_museo %></h4> 
         <div class="card">
+          <input id="id_museo" value="<%= museo.id_museo %>" style="display:none">
           <div class="card-content pb-0">
             <div class="card-header mb2">
             </div>
@@ -50,7 +51,7 @@
 
                         <div class="col s9 offset-s2">
                           <input type="text" name="event" id="event" value="museo" style="display:none">
-                          <input type="text" name="filename" id="filename" style="display:none">
+                          <input type="text" name="filename" value="<%=museo.imgP_museo%>" id="filename" style="display:none">
                           <div id="imgMuseoValidate"> Selecciona una imagen para el museo </div>
                           <div class="card imgPicker">
                             <div class="card-image">
