--- a/views/sala_modificar.ejs
+++ b/views/sala_modificar.ejs
@@ -1,83 +1,128 @@
 <%- include('includes/header_image.ejs') %>
-<% for (let m of museos){%>
-    <% for (let sala of salas){%>
-    <main class="img-background">
-            <div class="row">
-                <form id="modifySala" action="/museo/<%=museo%>/<%=sala.id_sala%>" enctype="multipart/form-data">
-                <div class="col s10 offset-s1">
-                    <h4 class="white-text card-title"> <%=sala.nom_sala%> </h4> 
-                    <input id="id_museo" value="<%=museo%>" style="display:none">
-                    <input id="id_sala" value="<%=sala.id_sala%>" style="display:none">
-                    <div class="card">
-                        <div class="card-content pb-0">
-                            <div class="card-header mb2"> 
-                            </div>
-                            <form id="uploadSala" enctype="multipart/form-data">
-                            <ul class="stepper  linear horizontal">
-                            <li class="step active"> 
-                                <div class="step-title waves-effect"> <p>Información</p> </div>
-                                <div class="step-content">
-                                 <div class="row">
-                                     <div class="col s7">
-                            
-                                         <!-- NOMBRE -->
-                                         <div class="row center">
-                                           <div class="col s10 offset-s1">
-                                             <div class="input-field">
-                                                 <input id="nom_sala" name="nom_sala" type="text"
-                                                     class="validate" required data-length="70" maxlength="70" value="<%=sala.nom_sala%>">
-                                                 <label for="nom_sala"> Nombre de la sala <span class="required">*</span></label>
-                                                 <span class="helper-text" data-error="Este input es requerido"></span>
-                                             </div> 
-                                            
-                                             <!-- DESCRIPCIÓN -->
-                                             <div class="input-field">
-                                                <textarea id="desc_sala" name="desc_sala"
-                                                class="materialize-textarea validate" required><%=sala.desc_sala%></textarea>
-                                                <label for="desc_sala"> Descripción <span class="required">*</span></label>
-                                                <span class="helper-text" data-error="Este input es requerido"></span>
-                                             </div>
-                                            </div>
-                                         </div>
-                                     </div>
-                                     <div class="col s5">
-                                        
-                                            <div class="col s9 offset-s2">
-                                                   <input type="text" name="event" id="event" value="museo" style="display:none">
-                                                   <input type="text" name="filename" id="filename" value="<%=sala.img_sala%>" style="display:none">
-                                                   <div id="imgMuseoValidate"> Selecciona una imagen para la sala </div>
-                                                <div class="card imgPicker">
-                                                    <div class="card-image">
-                                                       <img class="imgPicker imgP" src="/uploads/museos/<%=sala.img_sala%>">
-                                                       <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload"
-                                                           onclick="uploadFile.click()"><i class="material-icons">edit</i></div>
-                                                       <input class="file-upload" type="file" name="uploadFile" id="uploadFile" style="display:none" accept="image/*">
+    <% for (let m of museos){%>
+        <% for (let sala of salas){%>
+            <main class="img-background">
+                <div class="row">
+                    
+                        <div class="col s10 offset-s1">
+                            <h4 class="white-text card-title">
+                                <%=sala.nom_sala%>
+                            </h4>
+                            <input id="id_museo" value="<%=museo%>" style="display:none">
+                            <input id="id_sala" value="<%=sala.id_sala%>" style="display:none">
+                            <div class="card">
+                                <div class="card-content pb-0">
+                                    <div class="card-header mb2">
+                                    </div>
+                                    <form id="modifySala" action="/museo/<%=museo%>/<%=sala.id_sala%>" enctype="multipart/form-data">
+                                        <ul class="stepper horizontal">
+                                            <li class="step active">
+                                                <div class="step-title waves-effect">
+                                                    <p>Información</p>
+                                                </div>
+                                                <div class="step-content">
+                                                    <div class="row">
+                                                        <div class="col s7">
+
+                                                            <!-- NOMBRE -->
+                                                            <div class="row center">
+                                                                <div class="col s10 offset-s1">
+                                                                    <div class="input-field">
+                                                                        <input id="nom_sala" name="nom_sala" type="text"
+                                                                            class="validate" required data-length="70"
+                                                                            maxlength="70" value="<%=sala.nom_sala%>">
+                                                                        <label for="nom_sala"> Nombre de la sala <span
+                                                                                class="required">*</span></label>
+                                                                        <span class="helper-text"
+                                                                            data-error="Este input es requerido"></span>
+                                                                    </div>
+
+                                                                    <!-- DESCRIPCIÓN -->
+                                                                    <div class="input-field">
+                                                                        <textarea id="desc_sala" name="desc_sala"
+                                                                            class="materialize-textarea validate"
+                                                                            required><%=sala.desc_sala%></textarea>
+                                                                        <label for="desc_sala"> Descripción <span
+                                                                                class="required">*</span></label>
+                                                                        <span class="helper-text"
+                                                                            data-error="Este input es requerido"></span>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col s5">
+
+                                                            <div class="col s9 offset-s2">
+                                                                <input type="text" name="event" id="event" value="museo"
+                                                                    style="display:none">
+                                                                <input type="text" name="filename" id="filename"
+                                                                    value="<%=sala.img_sala%>" style="display:none">
+                                                                <div id="imgMuseoValidate"> Selecciona una imagen para
+                                                                    la sala </div>
+                                                                <div class="card imgPicker">
+                                                                    <div class="card-image">
+                                                                        <img class="imgPicker imgP"
+                                                                            src="/uploads/museos/<%=sala.img_sala%>">
+                                                                        <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload"
+                                                                            onclick="uploadFile.click()"><i
+                                                                                class="material-icons">edit</i></div>
+                                                                        <input class="file-upload" type="file"
+                                                                            name="uploadFile" id="uploadFile"
+                                                                            style="display:none" accept="image/*">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+
+                                                        </div>
+                                                    </div>
+                                                    <div class="step-actions">
+                                                        <div class="row">
+                                                            <div class="col"> <button
+                                                                    class="waves-effect waves dark btn light-blue-secondary next-step"
+                                                                    type="reset"> Siguiente <i
+                                                                        class="material-icons right"> arrow_forward </i>
+                                                                </button> </div>
+                                                            <div class="col"><button type="submit" value="upload"
+                                                                    class="btn waves-effect waves-light green"><i
+                                                                        class="material-icons left">check</i>
+                                                                    Guardar Cambios
+                                                                </button></div>
+                                                        </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                       
-                                    </div>
-                                 </div>
-                                   <div class="step-actions">
-                                      <div class="row">
-                                        <div class="col"> <button class="waves-effect waves dark btn light-blue-secondary next-step" type="reset"> Siguiente <i class="material-icons right"> arrow_forward </i> </button> </div>
-                                        <div class="col"><button type="submit" value="upload" class="btn waves-effect waves-light green"><i class="material-icons left">check</i>
-                                            Guardar Cambios
-                                            </button></div>
-                                    </div>
-                                   </div>
+                                            </li>
+                                            <li class="step">
+                                                <div class="step-title waves-effect"> Salas </div>
+                                                <div class="step-content">
+                                                  <!-- DESCRIPCIÓN -->
+                                                  <div class="row">
+                                                    <% for (let obra of obras){%>
+                                                      <div> <%= obra.nom_obra %> </div>
+                                                      <a href="/museo/<%=m.id_museo%>/<%=sala.id_sala%>/<%=obra.id_obra%>"> link </a>
+                                                      <%}%>
+                                                  </div>
+                                                  
+                                                  <a href="/museo/<%=m.id_museo%>/<%=sala.id_sala%>/nueva_obra"> link </a>
+                                                  
+                                                  <div class="step-actions">
+                                                    <div class="row">
+                                                      <div class="col"> <button class="btn light-blue-secondary previous-step"> Anterior <i
+                                                            class="material-icons left"> arrow_back </i> </button> </div>
+                                                    </div>
+                                                  </div>
+                                                </div>
+                                              </li>
+                                        </ul>
+                                    </form>
                                 </div>
-                             </li>
-                        </form>
+                            </div>
+                            <%}%>
+                                <%}%>
                         </div>
-                    </div>
-                    <%}%>
-                        <%}%>
                 </div>
-            </div>
-       
-        
-            <script src="/js/script_create_sala.js"></script>    
-    </main>
-    
-    <%- include('includes/footer.ejs') %>
+
+
+                <script src="/js/script_create_sala.js"></script>
+            </main>
+
+            <%- include('includes/footer.ejs') %>
