--- a/views/sala_modificar.ejs
+++ b/views/sala_modificar.ejs
@@ -92,7 +92,7 @@
                                                 </div>
                                             </li>
                                             <li class="step">
-                                                <div class="step-title waves-effect"> Salas </div>
+                                                <div class="step-title waves-effect"> Obras </div>
                                                 <div class="step-content">
                                                   <!-- DESCRIPCIÓN -->
                                                   <div class="row">
