Deletes Icon option

--- a/views/agregar_guia.ejs
+++ b/views/agregar_guia.ejs
@@ -40,18 +40,15 @@
                         </div>
                         <div class="col s9">
                             <div class="row">
-                                <div class="col s6">
+                                <div class="col s12">
                                     <h5>Nombre de la Limitación</h5>
                                     <!-- <label for="nombre_limitacion">Nombre de la Limitacion</label> -->
                                     <input id="nombre_limitacion" placeholder="Ejemplo: Limitaciones Visuales"
                                         type="text" name="nombre" required>
                                 </div>
-                                <div class="col s6">
-                                    <h5>Icono</h5>
-                                    <!-- <label for="icono_limitacion">Icono de la Limitación</label> -->
-                                    <input id="icono_limitacion" type="file" class="customFile"
-                                        accept="image/png, image/jpg, image/jpeg" name="icono_limitacion">
-                                </div>
+                                <!-- <div class="col s6">
+                                    
+                                </div> -->
                             </div>
                             <div class="row">
                                 <div class="col s12">
