--- a/views/editar_guia.ejs
+++ b/views/editar_guia.ejs
@@ -62,7 +62,7 @@
                     <div class="row valign-wrapper" style="margin-bottom: 0px;">
                         <div class="col s1" style="margin-top: 0px;"></div>
                         <div class="col s10" style="margin-top: 0px; margin-bottom: 1em;">
-                            <h5>TIPS</h5>
+                            <h5>TIPS <span style="font-size: 12px;">(Procura poner cada Tip en una línea diferente.)</span></h5>
                             <textarea placeholder="Escribe Tips..." id="textarea2" class="materialize-textarea"
                                 data-length="200" name="tip"><%= tip %></textarea>
                             <!-- <label for="textarea2">Descripcion</label> -->
