--- a/views/update_solicitud.ejs
+++ b/views/update_solicitud.ejs
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Qultura Admin</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/stylarbac.css">
-    <link rel="stylesheet" href="/css/login_style.css">
-    <link rel="stylesheet" href="/materialize-css/dist/css/materialize.css" media="screen,projection" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <!--Import materialize.css-->
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/stylarbac.css">
+  <link rel="stylesheet" href="/css/login_style.css">
+  <link rel="stylesheet" href="/materialize-css/dist/css/materialize.css" media="screen,projection" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
+
 <body>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
     <div class="content">
-        <h1>Operacion completada!</h1>
-        <p>
-            Puedas cerrar el navegador
-        </p>
+      <div id="login-page" class="white row flex">
+        <div class="red col s6 card-panel login-card">
+          <img src="/img/login.jpg" class="responsive-img">
+        </div>
+        <div class="col s6 z-depth-6 card-panel login-card">
+          <div class="col s10 offset-s1">
+            <div class="center" style="margin-top:20px">
+              <div> Operacion Completada</div>
+              <div> puede cerrar esta pagina</div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
-</html>
+  </body>
+  </html>
