arregla view de andres

--- a/views/update_solicitud.ejs
+++ b/views/update_solicitud.ejs
@@ -22,8 +22,10 @@
     <div class="content">
       <div id="login-page" class="white row flex">
             <div class="center" style="margin-top:20px">
-              <div> Operacion Completada</div>
+              <h1>Operacion Completada</h1>
+              <br><br><br>
               <div> puede cerrar esta pagina</div>
+              <br><br><br>
             </div>
           </div>
         </div>
