--- a/views/obra_modificar.ejs
+++ b/views/obra_modificar.ejs
@@ -62,7 +62,7 @@
                                                                     la sala </div>
                                                                 <div class="card imgPicker">
                                                                     <div class="card-image">
-                                                                        <input id="filename" value="<%obra.img_obra%>" style="display:none">
+                                                                        <input id="filename2" value="<%=obra.img_obra%>" style="display:none">
                                                                         <input id="event" value="museo" style="display:none">
                                                                         <img class="imgPicker imgP" src="/uploads/museos/<%=obra.img_obra%>">
                                                                         <input style="display:none" name="url_obra" value="<%=obra.img_obra%>">
@@ -118,7 +118,7 @@
                                                                 
                                                                     <div class="file-field input-field">
                                                                         <div class="btn">
-                                                                            <input id="audioname" style="display:none">
+                                                                            <input id="audioname2" value="<%=obra.audio_obra%>" style="display:none">
                                                                             <span> Mp3</span>
                                                                             <input type="file" id="uploadAudio">
                                                                         </div>
